# cyclegan-style-transfer

./: .gitignore  LICENSE  README.md  cyclegan-style-transfer.ipynb  pyproject.toml
configs/: kaggle.yaml  local.yaml
src/: config.py  dataset.py  metrics.py  predict.py  train.py  trainer.py  utils.py
src/models/: __init__.py  blocks.py  discriminator.py  generator.py
